# gleamscribe-py

./: .gitignore  CHARSET_PARSER_FIX.md  IMPLEMENTATION_PLAN.md  KNOWN_ISSUES.md  README.md  TEST_PERFORMANCE_OPTIMIZATION.md  TRANSCRIPTION_COMPARISON.md  VALIDATION_SUMMARY.md  check_charset_codes.py  check_ruby_output.py  check_tokens.py  debug_comma.py  debug_exclam.py  debug_question_mark.py  debug_tokens_after_post.py  debug_transcription.py  final_check.py  generate_reference_transcriptions.py  pyproject.toml  test_check_errors.py  test_conditional_rules.py  test_cross_schema_processing.py  test_debug_ast.py  test_debug_context.py  test_debug_final.py  test_debug_if_content.py  test_debug_parsing.py  test_debug_structure.py  test_debug_traverse.py  test_glaeml_simple.py  test_js_output.js  test_mode_parser.py  test_processor.py  test_real_ast_structure.py  test_real_cross_rule.py  test_rule_pipeline.py  test_simple_cross_rule.py  test_tree_node.py  test_unicode_norm.py  test_variable_resolution.py  (+2 more)
scripts/: render_poem.py  render_text.py  simple_usage.py  test_ai_lauri.py  test_english_ring_verse.py  validate_unicode.py
src/glaemscribe/: __init__.py  api.py
src/glaemscribe/core/: charset.py  fragment.py  mode_debug_context.py  mode_enhanced.py  rule.py  rule_group.py  sheaf.py  sheaf_chain.py  sheaf_chain_iterator.py  sub_rule.py  transcription_processor.py  transcription_tree_node.py
src/glaemscribe/core/post_processor/: __init__.py  base.py  resolve_virtuals.py
src/glaemscribe/parsers/: charset_parser.py  glaeml.py  mode_parser.py  tengwar_font_mapping.py
src/glaemscribe/resources/: __init__.py
src/glaemscribe/resources/charsets/: tengwar_freemono.cst
src/glaemscribe/resources/modes/: english-tengwar-espeak.glaem  quenya-tengwar-classical.glaem  raw-tengwar.glaem  sindarin-tengwar-beleriand.glaem  sindarin-tengwar-general_use.glaem
src/glaemscribe/validation/: __init__.py  tengwar_validator.py  unicode_validator.py
tests/: conftest.py  test_cross_rules.py  test_integration.py  test_js_parity.py  test_macro_system.py  test_poem_transcription.py  test_real_world.py  test_real_world_generated.py  test_simple_api.py  test_transcription_comparison.py  test_transcription_core.py  test_transcription_validation.py  test_unicode_validation.py  test_unicode_variables.py  test_virtual_characters.py
tests/fixtures/: poem_transcription_canonical.json
